# anim-break

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  easygit.py  easygitconfig.json  main.cc  onetime.py
.github/workflows/: test_code.yml  test_code_ubuntu_latest.yml  test_code_windows_latest.yml
include/: animbreak.hpp
include/animbreak/: log.hpp
include/animbreak/ui/: window_manager.hpp
src/: log.cc  version.cc  window_manager.cc
unit-test/: CMakeLists.txt  sample_test.cc  version_check_test.cc  window_manager_test.cc
